<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.view.FormularioActivity"
       >

<include layout="@layout/actionbar_toolbar"></include>


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
               >

        <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/editTextBlack"
        android:layout_marginTop="@dimen/editText_margin_top"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/IDcorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_correo"
            />
    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/editTextBlack"
            android:layout_marginTop="@dimen/editText_margin_top"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/IDname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/editTextBlack"
            android:layout_marginTop="@dimen/editText_margin_top"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/IDusuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_usuario"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/editTextBlack"
            android:layout_marginTop="@dimen/editText_margin_top"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/IDcontraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_contraseña"
                android:inputType="textPassword"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/editTextBlack"
            android:layout_marginTop="@dimen/editText_margin_top"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/IDConfirmar_Contra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_confirmar_contraseña"
                android:inputType="textPassword"
                />


        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/IDunete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_unete"
            android:layout_marginTop="15dp"
            android:theme="@style/RaisedButtonDark"
            />

    </LinearLayout>

</ScrollView>


</android.support.design.widget.CoordinatorLayout>