<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="@dimen/cardview"
    android:id="@+id/IDcardview"
    card_view:cardCornerRadius="@dimen/card_corner_radius"
    android:layout_marginTop="@dimen/margintop_card"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView

            android:id="@+id/IdImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardview"
            android:background="@drawable/image"
            android:scaleType="centerCrop"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:transitionName="@string/transitionNameIumage"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_vertical_margin"
           android:layout_marginTop="@dimen/margin_top_carview"
            android:layout_gravity="bottom"
            android:background="@color/backgroundtext_card"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >

            <TextView
                android:id="@+id/IdNombreCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Nombre_card"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="@dimen/editText_size_nombre_cardview"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/IDfecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha"
                    android:textSize="@dimen/textsize_fecha"
                    android:textColor="@android:color/white"
                    />

                <TextView
                    android:id="@+id/IDnumeroFecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Numero_fecha"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textsize_numero_fecha"
                    android:layout_marginLeft="@dimen/marginleft_numero_fecha"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/like_margin_top"
                android:orientation="horizontal"
                >

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_seleptup"

                    />
                <TextView
                    android:id="@+id/IDlikeNumero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/likeNumero_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textsize_numero_fecha"
                    android:layout_marginLeft="@dimen/marginleft_numero_fecha"
                    />



            </LinearLayout>



        </LinearLayout>



    </FrameLayout>


</android.support.v7.widget.CardView>

</RelativeLayout>