<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.view.LoginActivity"
    android:background="@color/colorPrimary"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.view.LoginActivity"
    android:orientation="vertical"
    android:weightSum="1"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.4">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/platzigram"
            android:layout_centerInParent="true"
            android:onClick="onClickImage"

            />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.6"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_horizontal_login"

            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/editTextWhite"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/IDnombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_nombre"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/editTextWhite"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/IDpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"

                    />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/IDbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_button"
                android:layout_marginTop="15dp"
                android:theme="@style/RaisedButtonDark"
                android:onClick="onClickLogin"
                />


            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                >

                <TextView
                    android:id="@+id/IDcuenta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CUENTA"
                    android:textSize="@dimen/CUENTA"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    />

                <TextView
                    android:id="@+id/IDCREAR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CREAR"
                    android:textSize="@dimen/CREAR"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:layout_toRightOf="@+id/IDcuenta"
                    android:onClick="onClickTexView"
                    />

                <ProgressBar
                    android:id="@+id/IDprogressbarLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true" />

            </RelativeLayout>


        </LinearLayout>

    </ScrollView>




</LinearLayout>
</android.support.design.widget.CoordinatorLayout>