<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".post.view.DetallesImagenActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/IDappBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/AppbarLayoutHeight"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

     <android.support.design.widget.CollapsingToolbarLayout
    android:id="@+id/IDcollapsinToolbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_scrollFlags="scroll|exitUntilCollapsed"
    app:contentScrim="@color/colorPrimary"
    >

    <ImageView
        android:id="@+id/IDimageDetalle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:background="@drawable/image"
        app:layout_collapseMode="parallax"
        android:transitionName="@string/transitionNameIumage"
        />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_collapseMode="pin"

        />


</android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/ActivyMarginTop"
            >

            <TextView
                android:id="@+id/IDusernameDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/Textsize_usernameDetalle"
                android:text="@string/Nombre_card"
                android:paddingLeft="@dimen/marginleft_numero_fecha"
                android:paddingRight="@dimen/marginleft_numero_fecha"
                />
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/ActivyMarginTop"
                android:paddingRight="@dimen/marginleft_numero_fecha"
                android:paddingLeft="@dimen/marginleft_numero_fecha"
                >

                <TextView
                    android:id="@+id/IDlikeNumberDetalle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/Textsize_likeNumberDetalle"
                    android:text="10"
                    />

                <TextView
                    android:id="@+id/IDlikeDetalle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/Textsize_likeNumberDetalle"
                    android:text="@string/text_like_detalle"
                    android:layout_marginLeft="@dimen/marginleft_numero_fecha"
                    />


            </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_dividir"
            android:background="@android:color/darker_gray"
            />

            <TextView
                android:id="@+id/IDtituloDetalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/Textsize_likeNumberDetalle"
            android:text="@string/titulo_detalle"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:paddingTop="@dimen/ActivyMarginTop"
            />

            <TextView
                android:id="@+id/IDdescripcionImageDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/Textsize_likeNumberDetalle"
                android:text="@string/Descripcion_Image_detalle"
                android:layout_gravity="center_horizontal"
                android:paddingTop="@dimen/ActivyMarginTop"
                android:paddingLeft="@dimen/padding_descripcion_detalle"
                android:paddingRight="@dimen/padding_descripcion_detalle"
                />

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/icons8_heart_outline_24"
        app:layout_anchor="@id/IDappBar"
        app:layout_anchorGravity="bottom|end"
        />

</android.support.design.widget.CoordinatorLayout>